--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,8 +1,28 @@
-    <input  [(ngModel)]="userdetail.userName" placeholder="UserName" type="text" />
-    <input [(ngModel)]="userdetail.firstName" placeholder="FirstName">
-    <input [(ngModel)]="userdetail.lastName" placeholder="LastName">
-    <input [(ngModel)]="userdetail.email" placeholder="Email">
-    <input [(ngModel)]="userdetail.mobile" placeholder="Mobile">
-    <input [(ngModel)]="userdetail.address" placeholder="Address">
-    <input [(ngModel)]="userdetail.password" placeholder="Password">
-    <button type="submit" (click)="registerUser()">Register</button>
+<div align="center">
+<table>
+    <tr>
+            <input  [(ngModel)]="userdetail.userName" placeholder="UserName" type="text" />
+    </tr>
+    <tr>
+            <input [(ngModel)]="userdetail.firstName" placeholder="FirstName">
+    </tr>
+    <tr>
+            <input [(ngModel)]="userdetail.lastName" placeholder="LastName">
+    </tr>
+    <tr>
+            <input [(ngModel)]="userdetail.email" placeholder="Email">
+    </tr>
+    <tr>
+            <input [(ngModel)]="userdetail.mobile" placeholder="Mobile">
+    </tr>
+    <tr>
+            <input [(ngModel)]="userdetail.address" placeholder="Address">
+    </tr>
+    <tr>
+            <input [(ngModel)]="userdetail.password" placeholder="Password">
+    </tr>
+    <tr>
+            <button type="submit" (click)="registerUser()">Register</button>
+    </tr>
+</table>
+</div>
