--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <div align="center">
 <table>
     <tr>
-            <input  [(ngModel)]="userdetail.userName" placeholder="UserName" type="text" />
+            <input  [(ngModel)]="userdetail.userName" placeholder="UserName" type="text">
     </tr>
     <tr>
             <input [(ngModel)]="userdetail.firstName" placeholder="FirstName">
