--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,40 @@
+<nav class="navbar navbar-inverse">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+        </button>
+        <a class="navbar-brand" routerLink="/login">Blogger's Spot</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">
+        <ul class="nav navbar-nav">
+          <li *ngIf="user"><a routerLink="/blogs">BlogPosts</a></li>
+          <li *ngIf="user"><a routerLink="/jobs">Jobs</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li *ngIf="user"><a>Welcome: {{username}}</a></li>
+          <li><a *ngIf="showLogin" routerLink="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            
+          <li><a *ngIf="showLogout" routerLink="/login" (click)="logout()"> <span class="glyphicon glyphicon-log-in"></span>Logout</a></li>
+          
+          <li><a routerLink="/register">Register</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+<!--
+<div class="container">
 <div align="center">
     <table>
         <tr>
             <td>
-                <a *ngIf="true" routerLink="/login">Login</a>
+                <a *ngIf="showLogin" routerLink="/login">Login</a>
             </td>
             <td>
-                    <a *ngIf="true" routerLink="/logout"> Logout</a>
+                    <a *ngIf="showLogout" routerLink="/login" (click)="logout()"> Logout</a>
             </td>
             <td>
                     <a routerLink="/register">Register</a>
@@ -18,4 +47,24 @@
             
     </table>
 </div>
+</div>
+-->
 <router-outlet></router-outlet>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<footer class="container-fluid text-center">
+  <p>© 2019 Blogger's Spot. All rights reserved | Design by Kanhav Mathur</p>
+</footer>
